welcome.lessons.welcome.bat.bool1.SleepIn.scala.error
sleepIn:2: error: Boolean does not take parameters
	if ( weekday() == false || vacation() == true ) {
                    ^